<resources>
    <string name="app_name">Introduccion</string>
    <string name="coca_cola">Coca-cola</string>
    <string name="kas_limon">Kas Limon</string>
    <string name="kas_naranja">Kas Naranja</string>
    <string name="red_bull">Red Bull</string>
    <string name="cerveza">Cerveza</string>
    <string name="vino">Vino</string>
    <string name="comprar">COMPRAR</string>
    <string name="soy_del_rango_de_edad_permitido">Soy del rango de edad permitido.</string>
    <string name="nombre_y_apellidos">Nombre y apellidos</string>
    <string name="resultado">Resultado</string>
    <string name="_0" translatable="false">0</string>
    <string name="n_mero_de_tarjeta">Número de tarjeta</string>
    <string name="mes">Mes</string>
    <string name="anyo">Año</string>
    <string name="CVV">CVV</string>
    <string name="textview">TextView</string>
    <string name="validar">Validar</string>
    <string name="pagar">Pagar</string>
</resources>