<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ej2">

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/textview"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="176dp" />

    <Button
        android:id="@+id/bPagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/validar"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toTopOf="@+id/tvResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPrincipal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bPagar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724">


        <LinearLayout
            android:id="@+id/llPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009688"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNombretitular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/nombre_y_apellidos"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/etNumeroTarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_mero_de_tarjeta"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/lldatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etMes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mes"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etAnyo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/anyo"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/CVV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/CVV"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>